fixed the z-index for errors (#1108)

--- a/src/client/stylesheets/main.less
+++ b/src/client/stylesheets/main.less
@@ -568,7 +568,7 @@ span.ellipsis-text {
 }
 
 .ant-notification {
-  top: 80px !important;
+  z-index: 11111;
 }
 
 .dots div {
